--- a/sample.env
+++ b/sample.env
@@ -1,3 +1,7 @@
 PORT=8080
 NODE_ENV=development
 MONGO_URI=''
+const mySecretSession = process.env['SESSION_SECRET']
+
+const mySecretUri = process.env['MONGO_URI']
+
