cleaned the server.js

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 SESSION_SECRET="123asd123"
 MONGO_URI="mongodb+srv://ilker:123asd123@learningmongodb.duuyu.mongodb.net/database1?retryWrites=true&w=majority"
+GITHUB_CLIENT_ID="66ca24a5e062c8ae37e6"
+GITHUB_CLIENT_SECRET="252b6c4fcef0a168d7451c400ad5f287adb9989a"
