--- a/sample.env
+++ b/sample.env
@@ -5,3 +5,9 @@ const mySecretSession = process.env['SESSION_SECRET']
 
 const mySecretUri = process.env['MONGO_URI']
 
+
+
+
+const githubClientSecret = process.env['GITHUB_CLIENT_SECRET']
+
+const githubClientId = process.env['GITHUB_CLIENT_ID']
